# discriminant-pursuit

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  demo_rf_cv.ipynb  demo_waveform.ipynb  discr_pursuit.py  paper.bib  pyproject.toml  requirements.txt  test_discr_pursuit.py
.github/workflows/: draft-pdf.yml  tests.yml
extensions/: cosine_packets.py  dp_cv.py  dp_visualization.py  extensions.md
paper/: paper.md
workflows/: tests.yml
